--- a/PersonalSiteV3/jslabs.html
+++ b/PersonalSiteV3/jslabs.html
@@ -7,7 +7,7 @@
     <meta name="author" content="David Hall" />
     <meta name="keywords" content="JavaScript Playground, JS, Introduction to JavaScript, JavaScript Fundamentals" />
     <meta name="description" content="A demo site to learn JavaScript at Centriq Training.  Includes information about JavaScript, jQuery, and jQuery Plugins" />
-    <title>David Hall's Web Portfolio</title>
+    <title>JavaScript Labs</title>
 
     <!-- Bootstrap Theme -->
     <link href="css/bootstrap-flatly-theme.min.css" rel="stylesheet" />
@@ -29,7 +29,7 @@
 <body>
 
     <nav class="navbar-default navbar-fixed-top">
-        <a href="index.html" class="navbar-brand">JavaScript Playground</a>
+        <a href="index.html" class="navbar-brand">My Web Portfolio</a>
 
         <!--Hamburger Button-->
         <a href="javascript:void(0)" class="pull-right" onclick="toggleNav()" id="menu-btn">
@@ -49,7 +49,7 @@
             </li>
             <li>
                 <a href="contacts.html">
-                    Contact Me
+                    Contacts
                 </a>
             </li>
             <li>
@@ -59,7 +59,7 @@
             </li>
             <!--Navbar Dropdown-->
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle"
+                <a href="jsLabs.html" class="dropdown-toggle"
                    role="button" data-toggle="dropdown" target="_blank"
                    aria-haspopup="true" aria-expanded="false">
                     Projects<span class="caret"></span>
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="jslabs.html">
+                        <a href="jslabs.html" class="active">
                             HTML5/JavaScript Projects
                         </a>
                     </li>
@@ -83,7 +83,7 @@
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <h1>Introduction to JavaScript</h1>
+            <h1>My Javascript Skills</h1>
         </div>
     </div>
     <main class="container">
