--- a/PersonalSiteV3/contacts.html
+++ b/PersonalSiteV3/contacts.html
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="jslabs.html">
                             HTML5/JavaScript Projects
                         </a>
                     </li>
@@ -135,7 +135,7 @@
             <article class="col-sm-4">
                 <h2 style="text-align:center">My Phone Number</h2>
                 <p style="text-align:center">
-                    <a href="tel:+01-618-979-1494">Call My Work Phone</a>
+                    <a href="tel:618-979-1494">Call My Work Phone</a>
                     <img src="img/pic2.jpg" class="img-responsive thumb" />
                 </p>
             </article>
