--- a/PersonalSiteV3/links.html
+++ b/PersonalSiteV3/links.html
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="jslabs.html">
                             HTML5/JavaScript Projects
                         </a>
                     </li>
