--- a/PersonalSiteV3/projects.html
+++ b/PersonalSiteV3/projects.html
@@ -29,7 +29,7 @@
 <body>
 
     <nav class="navbar-default navbar-fixed-top">
-        <a href="index.html" class="navbar-brand">JavaScript Playground</a>
+        <a href="index.html" class="navbar-brand">My Web Portfolio</a>
 
         <!--Hamburger Button-->
         <a href="javascript:void(0)" class="pull-right" onclick="toggleNav()" id="menu-btn">
@@ -49,22 +49,16 @@
             </li>
             <li>
                 <a href="contacts.html">
-                    Contact Me
-                </a>
-            </li>
-            <li>
-                <a href="resume.html">
-                    Resume
+                    Contacts
                 </a>
             </li>
             <!--Navbar Dropdown-->
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle"
+            <li class="dropdown; active">
+                <a href="jsLabs.html" class="dropdown-toggle"
                    role="button" data-toggle="dropdown" target="_blank"
                    aria-haspopup="true" aria-expanded="false">
                     Projects<span class="caret"></span>
                 </a>
-
                 <ul class="dropdown-menu">
                     <li>
                         <a href="#">
@@ -72,13 +66,16 @@
                         </a>
                     </li>
                     <li>
-                        <a href="jslabs.html">
-                            HTML5/JavaScript Projects
-                        </a>
+                        <a href="jslabs.html">HTML5/JavaScript Projects</a>
                     </li>
                 </ul>
-
             </li>
+            <li>
+                <a href="resume.html">
+                    Resum&eacute;
+                </a>
+            </li>
+
         </ul>
     </nav>
     <div class="jumbotron">
