--- a/PersonalSiteV3/index.html
+++ b/PersonalSiteV3/index.html
@@ -52,11 +52,6 @@
                     Contacts
                 </a>
             </li>
-            <li>
-                <a href="resume.html">
-                    Resume
-                </a>
-            </li>
             <!--Navbar Dropdown-->
             <li class="dropdown">
                 <a href="jsLabs.html" class="dropdown-toggle"
@@ -64,7 +59,6 @@
                    aria-haspopup="true" aria-expanded="false">
                     Projects<span class="caret"></span>
                 </a>
-
                 <ul class="dropdown-menu">
                     <li>
                         <a href="#">
@@ -72,13 +66,16 @@
                         </a>
                     </li>
                     <li>
-                        <a href="jslabs.html">
-                            HTML5/JavaScript Projects
-                        </a>
+                        <a href="jslabs.html">HTML5/JavaScript Projects</a>
                     </li>
                 </ul>
-
             </li>
+            <li>
+                <a href="resume.html">
+                    Resum&eacute;
+                </a>
+            </li>
+
         </ul>
     </nav>
     <!--/#navbar-->
