--- a/PersonalSiteV3/links.html
+++ b/PersonalSiteV3/links.html
@@ -29,7 +29,7 @@
 <body>
     <!--Collapsible nav-->
     <nav class="navbar-default navbar-fixed-top">
-        <a href="index.html" class="navbar-brand">My Web Porfolio</a>
+        <a href="index.html" class="navbar-brand">My Web Portfolio</a>
 
         <!--Hamburger Button-->
         <a href="javascript:void(0)" class="pull-right" onclick="toggleNav()" id="menu-btn">
@@ -52,11 +52,6 @@
                     Contacts
                 </a>
             </li>
-            <li>
-                <a href="resume.html">
-                    Resume
-                </a>
-            </li>
             <!--Navbar Dropdown-->
             <li class="dropdown">
                 <a href="jsLabs.html" class="dropdown-toggle"
@@ -64,7 +59,6 @@
                    aria-haspopup="true" aria-expanded="false">
                     Projects<span class="caret"></span>
                 </a>
-
                 <ul class="dropdown-menu">
                     <li>
                         <a href="#">
@@ -72,15 +66,18 @@
                         </a>
                     </li>
                     <li>
-                        <a href="jslabs.html">
-                            HTML5/JavaScript Projects
-                        </a>
+                        <a href="jslabs.html">HTML5/JavaScript Projects</a>
                     </li>
                 </ul>
-
             </li>
+            <li>
+                <a href="resume.html">
+                    Resum&eacute;
+                </a>
+            </li>
+
         </ul>
-    </nav><!--/#navbar-->
+    </nav>
     <!--/Main Nav-->
     <!--Page Header-->
     <div class="jumbotron">
