--- a/PersonalSiteV3/resume.html
+++ b/PersonalSiteV3/resume.html
@@ -37,6 +37,7 @@
     <!--Collapsible nav-->
     <nav class="navbar-default navbar-fixed-top">
         <a href="index.html" class="navbar-brand">My Web Portfolio</a>
+
         <!--Hamburger Button-->
         <a href="javascript:void(0)" class="pull-right" onclick="toggleNav()" id="menu-btn">
             &#9776;
@@ -58,11 +59,6 @@
                     Contacts
                 </a>
             </li>
-            <li class="active">
-                <a href="resume.html">
-                    Resume
-                </a>
-            </li>
             <!--Navbar Dropdown-->
             <li class="dropdown">
                 <a href="jsLabs.html" class="dropdown-toggle"
@@ -70,7 +66,6 @@
                    aria-haspopup="true" aria-expanded="false">
                     Projects<span class="caret"></span>
                 </a>
-
                 <ul class="dropdown-menu">
                     <li>
                         <a href="#">
@@ -78,15 +73,18 @@
                         </a>
                     </li>
                     <li>
-                        <a href="jslabs.html">
-                            HTML5/JavaScript Projects
-                        </a>
+                        <a href="jslabs.html">HTML5/JavaScript Projects</a>
                     </li>
                 </ul>
-
             </li>
+            <li class="active">
+                <a href="resume.html">
+                    Resum&eacute;
+                </a>
+            </li>
+
         </ul>
-    </nav><!--/#navbar-->
+    </nav>
     <!--/Main Nav-->
     <!--Page Header-->
     <div class="jumbotron">
