Added target="_blank" to contacts
LinkedIn now opens new tab

Resume now has toggle() accordian

--- a/PersonalSiteV3/contacts.html
+++ b/PersonalSiteV3/contacts.html
@@ -125,7 +125,7 @@
             <article class="col-md-4">
                 <h2 style="text-align:center">My LinkedIn</h2>
                 <ul id="highlights" style="text-align:center">
-                    <a href="https://www.linkedin.com/in/david-hall-18a5011b0/">Find Me on LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/david-hall-18a5011b0/" target="_blank">Find Me on LinkedIn</a>
                     <img src="img/mylinkedin.png" class="img-responsive thumb" />
                 </ul>
             </article>
