--- a/PersonalSiteV3/resume.html
+++ b/PersonalSiteV3/resume.html
@@ -247,7 +247,9 @@
         $(function () {
             //Accordian function call
             $("#accordion").accordion();
-            $("#accordion2").accordion();
+            $("#accordion2").accordion({
+                collapsible: true
+            });
             //DatePicker function call
             $("#datepicker").datepicker({
                 changeMonth: true,
