--- a/PersonalSiteV3/jslabs.html
+++ b/PersonalSiteV3/jslabs.html
@@ -113,7 +113,7 @@
             <article class="col-md-4">
                 <h2>Looping Multiples of Seven</h2>
                 <p>
-                    Here are the multiples of seven starting from 1x7 to 30x7.
+                    Here are the multiples of seven starting from 1x7 to 7x7.
                 </p>
                 <span id="loopSeven"></span>
             </article>
@@ -130,6 +130,8 @@
                 </div>
                 <span id="farenheit"></span>
             </article>
+        </div>
+        <div class="row">
             <article class="col-md-4">
                 <h2>Area of Square</h2>
                 <p>
@@ -142,6 +144,8 @@
                     <input type="button" class="btn btn-success" value="Area of Square" onclick="displayAreaOfSquare()" />
                 </div>
                 <span id="areaOfSquare"></span>
+            </article>
+            <article class="col-md-4">
                 <h2>Area of Triangle</h2>
                 <p>
                     Area of a Triangle.
@@ -156,6 +160,8 @@
                     <input type="button" class="btn btn-success" value="Area of Triangle" onclick="AreaOfTriangle()" />
                 </div>
                 <span id="areaOfTriangle"></span>
+            </article>
+            <article class="col-md-4">
                 <h2>Area of Cirlce</h2>
                 <p>
                     Area of a Cirlce.
@@ -167,6 +173,10 @@
                     <input type="button" class="btn btn-success" value="Area of Circle" onclick="displayAreaOfCircle()" />
                 </div>
                 <span id="areaOfCircle"></span>
+            </article>
+        </div>
+        <div class="row">
+            <article class="col-md-4">
                 <h2>Area of Ring</h2>
                 <p>
                     Area of a Ring.
@@ -181,6 +191,8 @@
                     <input type="button" class="btn btn-success" value="Area of Circle" onclick="displayAreaOfRing()" />
                 </div>
                 <span id="areaOfRing"></span>
+            </article>
+            <article class="col-md-4">
                 <h2>Change Calculator</h2>
                 <p>
                     Dollars in change.
@@ -193,8 +205,7 @@
                 </div>
                 <span id="dollarInChange"></span>
             </article>
-
-        </div>
+        </div>        
     </main>
     <!--/Main Content-->
     <!--Footer-->
