--- a/PersonalSiteV3/projects.html
+++ b/PersonalSiteV3/projects.html
@@ -7,15 +7,15 @@
     <meta name="author" content="David Hall" />
     <meta name="keywords" content="JavaScript Playground, JS, Introduction to JavaScript, JavaScript Fundamentals" />
     <meta name="description" content="A demo site to learn JavaScript at Centriq Training.  Includes information about JavaScript, jQuery, and jQuery Plugins" />
-    <title>David Hall's Web Portfolio</title>
+    <title>JavaScript Labs</title>
 
     <!-- Bootstrap Theme -->
     <link href="css/bootstrap-flatly-theme.min.css" rel="stylesheet" />
 
     <!--Custom CSS-->
     <link href="css/custom.css" rel="stylesheet" />
-	
-	<!--Favicon-->
+
+    <!--Favicon-->
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -53,7 +53,7 @@
                 </a>
             </li>
             <!--Navbar Dropdown-->
-            <li class="dropdown; active">
+            <li class="dropdown">
                 <a href="jsLabs.html" class="dropdown-toggle"
                    role="button" data-toggle="dropdown" target="_blank"
                    aria-haspopup="true" aria-expanded="false">
@@ -65,7 +65,7 @@
                             C# Projects
                         </a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="jslabs.html">HTML5/JavaScript Projects</a>
                     </li>
                 </ul>
@@ -80,7 +80,7 @@
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <h1>Introduction to JavaScript</h1>
+            <h1>My Javascript Skills</h1>
         </div>
     </div>
     <main class="container">
@@ -113,7 +113,7 @@
             <article class="col-md-4">
                 <h2>Looping Multiples of Seven</h2>
                 <p>
-                    Here are the multiples of seven starting from 1x7 to 30x7.
+                    Here are the multiples of seven starting from 1x7 to 7x7.
                 </p>
                 <span id="loopSeven"></span>
             </article>
@@ -130,6 +130,8 @@
                 </div>
                 <span id="farenheit"></span>
             </article>
+        </div>
+        <div class="row">
             <article class="col-md-4">
                 <h2>Area of Square</h2>
                 <p>
@@ -142,6 +144,8 @@
                     <input type="button" class="btn btn-success" value="Area of Square" onclick="displayAreaOfSquare()" />
                 </div>
                 <span id="areaOfSquare"></span>
+            </article>
+            <article class="col-md-4">
                 <h2>Area of Triangle</h2>
                 <p>
                     Area of a Triangle.
@@ -156,6 +160,8 @@
                     <input type="button" class="btn btn-success" value="Area of Triangle" onclick="AreaOfTriangle()" />
                 </div>
                 <span id="areaOfTriangle"></span>
+            </article>
+            <article class="col-md-4">
                 <h2>Area of Cirlce</h2>
                 <p>
                     Area of a Cirlce.
@@ -167,6 +173,10 @@
                     <input type="button" class="btn btn-success" value="Area of Circle" onclick="displayAreaOfCircle()" />
                 </div>
                 <span id="areaOfCircle"></span>
+            </article>
+        </div>
+        <div class="row">
+            <article class="col-md-4">
                 <h2>Area of Ring</h2>
                 <p>
                     Area of a Ring.
@@ -181,6 +191,8 @@
                     <input type="button" class="btn btn-success" value="Area of Circle" onclick="displayAreaOfRing()" />
                 </div>
                 <span id="areaOfRing"></span>
+            </article>
+            <article class="col-md-4">
                 <h2>Change Calculator</h2>
                 <p>
                     Dollars in change.
@@ -193,7 +205,6 @@
                 </div>
                 <span id="dollarInChange"></span>
             </article>
-
         </div>
     </main>
     <!--/Main Content-->
